<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:orientation="vertical"
    android:backgroundTint="@color/dark_Background"
    android:layout_margin="15dp"
    app:cardElevation="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_margin="13dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/_0"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily='android:fontFamily="@font/ubuntu_bold"'
                android:text="@string/category_name"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily='android:fontFamily="@font/ubuntu_bold"'
                android:text="@string/note"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/date"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:onClick="Deletefile"
                    app:srcCompat="@drawable/trash"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck"
                    android:contentDescription="@string/delete" />
            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="73dp"
            android:layout_height="84dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="14dp"
            android:layout_toEndOf="@id/linearLayout"
            android:src="@drawable/house"
            android:contentDescription="@string/cat" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>